--- a/Weboldal fájlok💬.html
+++ b/Weboldal fájlok💬.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Videók 📽</title>
+<title>Weboldal fájlok 💬</title>
 <link rel="stylesheet" href="style.css">
 <style>
   .error { color: rgb(255, 255, 255); margin-top: 10px; }
@@ -15,16 +15,16 @@
   <header class="link">
     <div class="sor">
       <a href="galeria.html">Vissza</a>
-      <h1>Videók 📽</h1>
+      <h1>Weboldal fájlok 💬</h1>
     </div>
   </header>
 
   <!-- Fő tartalom -->
   <main style="padding: 20px;">
-    <a href="https://my.storageshare.cloud/s/C2nLYLxwMmSSA4K" class="adat fullwidth" target="_blank">Videó feltöltő</a>
+    <a href="https://my.storageshare.cloud/s/difLSK6Q89emmLk" class="adat fullwidth" target="_blank">Weboldal fájl feltöltő</a>
     
     <!-- Szerkesztő / tároló link -->
-    <button id="editLink" class="adat fullwidth">Videó szerkesztő / tároló</button>
+    <button id="editLink" class="adat fullwidth">Weboldal fájl szerkesztő / tároló</button>
     <p class="error" id="errorMsg"></p>
   </main>
 
@@ -37,7 +37,7 @@
 const button = document.getElementById("editLink");
 const errorMsg = document.getElementById("errorMsg");
 const helyesKod = "201004";  // Ide írd a jelszót
-const celLink = "https://my.storageshare.cloud/s/RByLgeDdYYo6d7z"; // link
+const celLink = "https://my.storageshare.cloud/s/JRQAjBjAzsF6dHL"; // link
 
 button.addEventListener("click", function() {
     const kod = prompt("Írd be a kódot:");
