--- a/Word fájlok📝.html
+++ b/Word fájlok📝.html
@@ -3,8 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Prezentációk 🎭</title>
+<title>Word fájlok 📝</title>
 <link rel="stylesheet" href="style.css">
+<style>
+  .error { color: rgb(255, 255, 255); margin-top: 10px; }
+</style>
 </head>
 <body>
 
@@ -12,25 +15,41 @@
   <header class="link">
     <div class="sor">
       <a href="galeria.html">Vissza</a>
-      <h1>Prezentációk 🎭</h1>
+      <h1>Word fájlok 📝</h1>
     </div>
   </header>
 
   <!-- Fő tartalom -->
   <main style="padding: 20px;">
-    <a href="ZGDÖK prezi 2025-10.pptx" class="adat fullwidth">ZGDÖK PPT</a>
-    <a href="ZGDÖK prezi 2025-10.pptx" class="adat fullwidth">PPT 2</a>
-    <a href="ZGDÖK prezi 2025-10.pptx" class="adat fullwidth">PPT 3</a>
-    <a href="ZGDÖK prezi 2025-10.pptx" class="adat fullwidth">PPT 4</a>
-    <a href="ZGDÖK prezi 2025-10.pptx" class="adat fullwidth">PPT 5</a>
-    <a href="ZGDÖK prezi 2025-10.pptx" class="adat fullwidth">PPT 6</a>
-    <a href="ZGDÖK prezi 2025-10.pptx" class="adat fullwidth">PPT 7</a>
+    <a href="https://my.storageshare.cloud/s/X48Ym6rsLnf9JEd" class="adat fullwidth" target="_blank">Word feltöltő</a>
+    
+    <!-- Szerkesztő / tároló link -->
+    <button id="editLink" class="adat fullwidth">Word szerkesztő / tároló</button>
+    <p class="error" id="errorMsg"></p>
+    
   </main>
 
   <!-- Footer -->
   <footer>
     &copy; 2025 Benedek szervere
   </footer>
+
+<script>
+const button = document.getElementById("editLink");
+const errorMsg = document.getElementById("errorMsg");
+const helyesKod = "201004";  // Ide írd a jelszót
+const celLink = "https://my.storageshare.cloud/s/aMaCgQYijdeqjHC"; // link
+
+button.addEventListener("click", function() {
+    const kod = prompt("Írd be a kódot:");
+    if(kod === helyesKod) {
+        window.open(celLink, "_blank");
+        errorMsg.textContent = ""; // ha jó a kód, eltünteti a hibaüzenetet
+    } else {
+        errorMsg.textContent = "Hibás kód! Próbáld újra.";
+    }
+});
+</script>
 
 </body>
 </html>
