--- a/galeria.html
+++ b/galeria.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Galéria</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="galeria.css">
 </head>
 <body>
 
@@ -19,7 +19,7 @@
   <h2><a href="Prezentációk🎭.html" class="adat">Prezentációk 🎭</a></h2>
   <h2><a href="Word fájlok📝.html" class="adat">Word fájlok 📝</a></h2>
   <h2><a href="Exel fájlok📊.html" class="adat">Exel fájlok 📊</a></h2>
-  <h2><a href="Szöveges fájlok💬.html" class="adat">Szöveges fájlok 💬</a></h2>
+  <h2><a href="Weboldal fájlok💬.html" class="adat">Szöveges fájlok 💬</a></h2>
   <h2><a href="Képek🖼.html" class="adat">Képek 📷</a></h2>
   <h2><a href="Videók📽.html" class="adat">Videók 📽</a></h2>
   <h2><a href="Zenék🎧.html" class="adat">Zenék 🎧</a></h2>
