--- a/hibas.html
+++ b/hibas.html
@@ -1,32 +1,128 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hibás kód</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Hibás kód</title>
+<style>
+  body {
+    min-height: 100%;
+    background: linear-gradient(135deg, #0a1931, #185adb, #1f4287);
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: 'Poppins', sans-serif;
+    color: white;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-x: hidden;
+  }
+
+  .title {
+    font-size: 60px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin: 40px 0;
+  }
+
+  .login-box {
+    background-color: rgba(255, 255, 255, 0.1);
+    border: 2px solid white;
+    border-radius: 20px;
+    padding: 30px;
+    width: 500px;        /* alap asztali méret */
+    max-width: 90%;      /* ne lépje túl a képernyő 90%-át */
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
+    margin: 20px auto;
+  }
+
+  .login-box h2 {
+    margin-bottom: 20px;
+    font-size: 20px;
+  }
+
+  .login-box button {
+    padding: 10px 20px;
+    border: 2px solid white;
+    border-radius: 10px;
+    background: transparent;
+    color: white;
+    font-weight: bold;
+    font-size: 14px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+
+  .login-box button:hover {
+    background: white;
+    color: #1f4287;
+  }
+
+  .info {
+    font-size: 12px;
+    color: #ddd;
+    margin-top: 10px;
+  }
+
+  footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background: rgba(255, 255, 255, 0.2);
+    text-align: center;
+    padding: 10px 0;
+    font-size: 14px;
+    color: white;
+    backdrop-filter: blur(5px);
+    border-top: 2px solid rgba(255, 255, 255, 0.8);
+    box-shadow: 0 -0px 15px rgba(255, 255, 255, 0.6);
+  }
+
+  /* Mobil optimalizálás */
+  @media (max-width: 768px) {
+    .login-box {
+      padding: 20px;
+      width: auto;
+      margin: 20px 30px; /* nagyobb margó két oldalt */
+    }
+    .login-box h2 {
+      font-size: 18px;
+    }
+    .login-box button {
+      font-size: 14px;
+    }
+  }
+</style>
 </head>
-<body class="login-body">
-  <div class="login-box">
-    <h2>❌ Hibás kód!</h2>
-    <p class="info">A megadott kód nem megfelelő.<br>Próbáld újra!</p>
-    <button onclick="window.location.href='index.html'">Vissza</button>
-  </div>
+<body>
+<h1 class="title">Benedek szervere</h1>
 
-  <script>
-    const visszaGomb = document.querySelector("button");
+<div class="login-box">
+  <h2>❌ Hibás kód ❌</h2>
+  <p class="info">A megadott kód nem megfelelő.<br><br>Próbáld újra!</p>
+  <button id="vissza">Vissza</button>
+</div>
 
-    // Kattintás
-    visszaGomb.addEventListener("click", () => {
-      window.location.href = "index.html";
-    });
+<footer>© 2025 Benedek Szervere | Minden jog fenntartva</footer>
 
-    // Enter lenyomás
-    document.addEventListener("keypress", function(e) {
-      if (e.key === "Enter") {
-        window.location.href = "index.html";
-      }
-    });
-  </script>
+<script>
+const visszaBtn = document.getElementById("vissza");
+
+// Vissza gomb kattintásra
+visszaBtn.addEventListener("click", function() {
+    window.location.href = 'index.html';
+});
+
+// Enter gomb lenyomására is működjön
+document.addEventListener("keypress", function(e) {
+    if(e.key === "Enter") {
+        window.location.href = 'index.html';
+    }
+});
+</script>
 </body>
 </html>
