--- a/Word fájlok📝.html
+++ b/Word fájlok📝.html
@@ -37,8 +37,8 @@
 <script>
 const button = document.getElementById("editLink");
 const errorMsg = document.getElementById("errorMsg");
-const helyesKod = "201004";  // Ide írd a jelszót
-const celLink = "https://my.storageshare.cloud/s/aMaCgQYijdeqjHC"; // link
+const helyesKod = "Benedek2010_";  // Ide írd a jelszót
+const celLink = "https://my.storageshare.cloud/s/oXwx3wNncgZrWP3"; // link
 
 button.addEventListener("click", function() {
     const kod = prompt("Írd be a kódot:");
