--- a/Barátok❤.html
+++ b/Barátok❤.html
@@ -36,8 +36,8 @@
 <script>
 const button = document.getElementById("editLink");
 const errorMsg = document.getElementById("errorMsg");
-const helyesKod = "201004";  // Ide írd a jelszót
-const celLink = "https://my.storageshare.cloud/s/8eCsgWCn97yd2tW"; // link
+const helyesKod = "Benedek2010_";  // Ide írd a jelszót
+const celLink = "https://my.storageshare.cloud/s/iitm6NPpAcJ7aDB"; // link
 
 button.addEventListener("click", function() {
     const kod = prompt("Írd be a kódot:");
