--- a/Képek🖼.html
+++ b/Képek🖼.html
@@ -36,8 +36,8 @@
 <script>
 const button = document.getElementById("editLink");
 const errorMsg = document.getElementById("errorMsg");
-const helyesKod = "201004";  // Ide írd a jelszót
-const celLink = "https://my.storageshare.cloud/s/JRQAjBjAzsF6dHL"; // link
+const helyesKod = "Benedek2010_";  // Ide írd a jelszót
+const celLink = "https://my.storageshare.cloud/s/mbfRnkWfpcSTD47"; // link
 
 button.addEventListener("click", function() {
     const kod = prompt("Írd be a kódot:");
