--- a/Videók📽.html
+++ b/Videók📽.html
@@ -36,8 +36,8 @@
 <script>
 const button = document.getElementById("editLink");
 const errorMsg = document.getElementById("errorMsg");
-const helyesKod = "201004";  // Ide írd a jelszót
-const celLink = "https://my.storageshare.cloud/s/RByLgeDdYYo6d7z"; // link
+const helyesKod = "Benedek2010_";  // Ide írd a jelszót
+const celLink = "https://my.storageshare.cloud/s/yBNrj8BYBQ5iNZT"; // link
 
 button.addEventListener("click", function() {
     const kod = prompt("Írd be a kódot:");
