--- a/Zenék🎧.html
+++ b/Zenék🎧.html
@@ -36,8 +36,8 @@
 <script>
 const button = document.getElementById("editLink");
 const errorMsg = document.getElementById("errorMsg");
-const helyesKod = "201004";  // Ide írd a jelszót
-const celLink = "https://my.storageshare.cloud/s/AFfxH32rqH5JbKg"; // link
+const helyesKod = "Benedek2010_";  // Ide írd a jelszót
+const celLink = "https://my.storageshare.cloud/s/b9gfQHerCiYXP2n"; // link
 
 button.addEventListener("click", function() {
     const kod = prompt("Írd be a kódot:");
