--- a/galeria.html
+++ b/galeria.html
@@ -20,6 +20,7 @@
   <h2><a href="Word fájlok📝.html" class="adat">Word fájlok 📝</a></h2>
   <h2><a href="Exel fájlok📊.html" class="adat">Exel fájlok 📊</a></h2>
   <h2><a href="Weboldal fájlok💬.html" class="adat">Szöveges fájlok 💬</a></h2>
+  <h2><a href="https://benedek0420.github.io/weboldal-bemutato/index.html" target="_blank" class="adat">Weboldal segédletem</a></h2>
   <h2><a href="Képek🖼.html" class="adat">Képek 📷</a></h2>
   <h2><a href="Videók📽.html" class="adat">Videók 📽</a></h2>
   <h2><a href="Zenék🎧.html" class="adat">Zenék 🎧</a></h2>
@@ -32,3 +33,4 @@
 
 </body>
 </html>
+
